[gd_scene load_steps=3 format=3 uid="uid://floor123"]

[ext_resource type="Script" path="res://scripts/Floor.gd" id="1_floor"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_floor"]
size = Vector2(120, 16)

[node name="Floor" type="StaticBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_floor")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_floor")
one_way_collision = true

[node name="Visual" type="ColorRect" parent="."]
z_index = 1
offset_left = -60.0
offset_top = -8.0
offset_right = 60.0
offset_bottom = 8.0
color = Color(0.2, 0.35, 0.55, 1)

[node name="TopEdge" type="ColorRect" parent="."]
z_index = 2
offset_left = -60.0
offset_top = -8.0
offset_right = 60.0
offset_bottom = -5.0
color = Color(0.35, 0.55, 0.8, 1)

[node name="Highlight" type="ColorRect" parent="."]
z_index = 3
offset_left = -58.0
offset_top = -7.0
offset_right = 58.0
offset_bottom = -6.0
color = Color(0.6, 0.8, 1, 0.6)

[node name="LeftCap" type="ColorRect" parent="."]
z_index = 2
offset_left = -62.0
offset_top = -6.0
offset_right = -58.0
offset_bottom = 6.0
color = Color(0.25, 0.4, 0.6, 1)

[node name="RightCap" type="ColorRect" parent="."]
z_index = 2
offset_left = 58.0
offset_top = -6.0
offset_right = 62.0
offset_bottom = 6.0
color = Color(0.25, 0.4, 0.6, 1)

